# testRustF051

./: .project  Cargo.toml  OpenOCD_stlinkV2_STM32F0.launch  README.md  memory.x  testRustF051.hex
.cargo/: config
.externalToolBuilders/: cargo.launch
src/: fifo.rs  fifo.rs_old  main.rs
